cmake_minimum_required(VERSION 3.20)
project(depthRender)

set(CMAKE_CXX_STANDARD 14)
find_package(PCL  REQUIRED )
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(depthRender main.cpp  util.h)
target_link_libraries(depthRender ${PCL_LIBRARIES} ${OpenCV_LIBS})
